--- a/config.defaults.yml
+++ b/config.defaults.yml
@@ -1,109 +1,33 @@
 ---
 brew_taps:
-  - domt4/autoupdate
-  - frdmn/formulas
   - homebrew/cask-versions
   - homebrew/cask-fonts
-  - yt-dlp/taps
 
 brew_packages:
   - ansible
   - asciinema
   - bat
-  - bitwarden-cli
-  - composer
-  - coreutils
-  - ddig
-  - dev-search
-  - exa
-  - exiftool
+  - eza
   - ffmpeg
-  - git-extras
-  - git-shift
-  - go
-  - gpg2
-  - htop
-  - imapsync
   - iperf
-  - jq
   - mas
-  - media-info
-  - mitmproxy
-  - mtr
-  - nmap
-  - nodejs
-  - odig
-  - pinentry-mac
-  - ruby
-  - telnet
-  - terminal-notifier
   - tmux
-  - uping
   - wget
-  - yt-dlp
-  - zplug
   - zsh
 
 cask_packages:
-  - 1password
-  - aerial
-  - alfred
-  - appcleaner
-  - atext
-  - bartender
-  - bitwarden
-  - carbon-copy-cloner
-  - discord
   - docker
-  - dropbox
-  - dropshare
   - font-hack-nerd-font
-  - gas-mask
-  - gitup
   - google-chrome
-  - hex-fiend
-  - iterm2
-  - keka
-  - nordvpn
-  - nvalt
-  - qlmarkdown
-  - qlstephen
-  - quicklook-json
-  - spotify
-  - suspicious-package
   - telegram
-  - textual
-  - transmit
-  - vagrant
   - visual-studio-code
   - vlc
-  - wireshark
-
-gem_packages:
-  - nokogiri
 
 mas_packages:
-  - 1451685025  # Wireguard
-  - 411643860  # DaisyDisk
-  - 1295203466  # Microsoft Remote Desktop
-  - 408981434  # iMovie
-  - 430255202  # Mactracker
-  - 409183694  # Keynote
-  - 1289583905  # Pixelmator Pro
-
-npm_packages:
-  - bower
-  - giracli
-  - grunt
-  - gulp
-  - init.js
-  - json
-  - prettyjson
-  - tlstools
-  - yarn
-  - yo
-
-pip_packages:
-  - beautifulsoup4
-  - docker
-  - ffpb
+  - 1451685025 # Wireguard
+  - 411643860 # DaisyDisk
+  - 1295203466 # Microsoft Remote Desktop
+  - 408981434 # iMovie
+  - 430255202 # Mactracker
+  - 409183694 # Keynote
+  - 1289583905 # Pixelmator Pro
