--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -13,20 +13,8 @@
 
 - name: "[﬒ dotfiles] Set symlinks"
   ansible.builtin.file:
-    src: '{{ ansible_env.PWD }}/files/dotfiles/{{ item }}'
-    path: '~/.{{ item }}'
+    src: "{{ ansible_env.PWD }}/files/dotfiles/{{ item }}"
+    path: "~/.{{ item }}"
     state: link
   with_items:
     - "{{ files_to_symlink.stdout_lines }}"
-
-- name: "[﬒ dotfiles] Download Vundle (vi bundle manager)"
-  ansible.builtin.git:
-    repo: https://github.com/VundleVim/Vundle.vim.git
-    dest: ~/.vim/bundle/Vundle.vim
-    version: v0.10.2
-  changed_when: false
-
-- name: "[﬒ dotfiles] Setup and install Vundle"
-  ansible.builtin.shell:
-    cmd: echo | echo | vim +PluginInstall +qall &>/dev/null
-  changed_when: false
