--- a/roles/macos/tasks/main.yml
+++ b/roles/macos/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: "[ macOS] Disable \"Are you sure to open this application?\" dialog"
+- name: '[ macOS] Disable "Are you sure to open this application?" dialog'
   osx_defaults:
     domain: com.apple.LaunchServices
     key: LSQuarantine
@@ -29,46 +29,6 @@
     key: NSAutomaticDashSubstitutionEnabled
     type: bool
     value: false
-    state: present
-
-- name: "[ macOS] Trackpad - enable tap to click for user and login screen"
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: com.apple.mouse.tapBehavior
-    type: integer
-    value: 1
-    state: present
-
-- name: "[ macOS] Trackpad - enable tap to click for user and login screen"
-  osx_defaults:
-    domain: com.apple.driver.AppleBluetoothMultitouch.trackpad
-    key: Clicking
-    type: integer
-    value: 1
-    state: present
-
-- name: "[ macOS] Disable press-and-hold for keys in favor of key repeat"
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: ApplePressAndHoldEnabled
-    type: bool
-    value: false
-    state: present
-
-- name: "[ macOS] Set a blazingly fast keyboard repeat rate"
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: KeyRepeat
-    type: integer
-    value: 2
-    state: present
-
-- name: "[ macOS] Set a short keyboard repeat rate delay"
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: InitialKeyRepeat
-    type: integer
-    value: 15
     state: present
 
 - name: "[ macOS] Increase speed of trackpad cursor movement"
