--- a/files/dotfiles/config/zed/settings.json
+++ b/files/dotfiles/config/zed/settings.json
@@ -7,11 +7,40 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "edit_predictions": {
+    "mode": "subtle",
+    "copilot": {
+      "proxy": null,
+      "proxy_no_verify": null
+    },
+    "enabled_in_assistant": false
+  },
+  "assistant": {
+    "default_model": {
+      "provider": "copilot_chat",
+      "model": "gpt-4o"
+    },
+    "version": "2"
+  },
+  "enable_final_newline": true,
+  "preferred_line_length": 120,
+  "wrap_guides": [80, 120],
   "ui_font_size": 14,
   "buffer_font_size": 14,
+  "terminal_font_size": 14,
+  "buffer_font_family": "Hack Nerd Font",
+  "terminal_font_family": "Hack Nerd Font",
+  "buffer_line_height": { "custom": 1.35 },
   "theme": {
     "mode": "system",
     "light": "One Light",
     "dark": "One Dark"
+  },
+  "git": {
+    "git_gutter": "tracked_files",
+    "inline_blame": {
+      "enabled": true,
+      "format": "right"
+    }
   }
 }
