--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
-- name: "[﬒ dotfiles] Get list of files to symlink"
+- name: "[ dotfiles] Get list of files to symlink"
   ansible.builtin.shell: |
     ls -1 {{ ansible_env.PWD }}/files/dotfiles > /tmp/dotfilesToLink
   changed_when: false
 
-- name: "[﬒ dotfiles] Store list of files into variable"
+- name: "[ dotfiles] Store list of files into variable"
   ansible.builtin.command: "cat /tmp/dotfilesToLink"
   register: files_to_symlink
   changed_when: false
   tags:
     - skip_ansible_lint
 
-- name: "[﬒ dotfiles] Set symlinks"
+- name: "[ dotfiles] Set symlinks"
   ansible.builtin.file:
     src: "{{ ansible_env.PWD }}/files/dotfiles/{{ item }}"
     path: "~/.{{ item }}"
