--- a/roles/mas/tasks/main.yml
+++ b/roles/mas/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: "[ mas] Install Mac App Store packages"
+- name: "[ mas] Install Mac App Store packages"
   mas:
     id: "{{ item }}"
     state: present
