--- a/files/dotfiles/config/zed/settings.json
+++ b/files/dotfiles/config/zed/settings.json
@@ -7,6 +7,7 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
+  "icon_theme": "Material Icon Theme",
   "vim_mode": false,
   "edit_predictions": {
     "mode": "subtle",
@@ -35,7 +36,7 @@
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "One Dark"
+    "dark": "Catppuccin Frappé"
   },
   "git": {
     "git_gutter": "tracked_files",
