--- a/files/dotfiles/config/zed/settings.json
+++ b/files/dotfiles/config/zed/settings.json
@@ -24,6 +24,7 @@
     },
     "version": "2"
   },
+  "format_on_save": "off",
   "enable_final_newline": true,
   "preferred_line_length": 120,
   "wrap_guides": [80, 120],
