--- a/files/dotfiles/config/starship.toml
+++ b/files/dotfiles/config/starship.toml
@@ -9,6 +9,8 @@ add_newline = true
 success_symbol = '[➜](bold green)' # The 'success_symbol' segment is being set to '➜' with the color 'bold green'
 
 [directory]
+truncate_to_repo = false
 truncation_length = 6
 truncation_symbol = '…/'
+home_symbol = "~"
 
