--- a/files/dotfiles/config/ghostty/config
+++ b/files/dotfiles/config/ghostty/config
@@ -1,3 +1,4 @@
+font-family = "CaskaydiaMono Nerd Font Mono"
 font-size = 15
 font-feature = calt off, liga off, dlig off
 
@@ -6,5 +7,9 @@ window-padding-x = 10
 window-padding-y = 10
 window-height = 40
 window-width = 160
+
+background-opacity = 0.8
+
+mouse-scroll-multiplier = 0.1
 
 theme = "/Users/roberto/.config/ghostty/tokyonight_night"
